[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "paypal-server-sdk"
description = "PayPal's SDK for interacting with the REST APIs"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = []
authors = []
urls = {Homepage = "https://github.com/paypal/PayPal-Python-Server-SDK"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.17", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
