[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "paypal-server-sdk"
description = "PayPal's SDK for interacting with the REST APIs"
version = "2.0.0"
readme = "README.md"
keywords = []
authors = []
dependencies = ["apimatic-core~=0.2.0, >= 0.2.23", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.9"]
classifiers = []
requires-python = ">=3.7"
[project.urls]
Homepage = "https://github.com/paypal/PayPal-Python-Server-SDK"
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
